@@ -18,6 +18,7 @@ Query/Query/USNOA2.pm
 Query/Query/GSC.pm
 Query/Query/SuperCOSMOS.pm
 Query/Query/Sesame.pm
+Query/Query/SIMBAD.pm
 Query/Query/Makefile.PL
 Transport/REST.pm
 Transport/WebService.pm
@@ -34,5 +35,6 @@ t/3_star.t
 t/4_gsc.t
 t/4_supercos.t
 t/4_usnoa2.t
+t/4_simbad.t
 t/4_skycat_usno.t
 t/4_skycat_gsc.t
